[gd_scene load_steps=8 format=3 uid="uid://d2do8ilhab482"]

[ext_resource type="Script" path="res://Scripts/Boards/Board.gd" id="1_qudp1"]
[ext_resource type="FontFile" uid="uid://dycfyvuoxfwc0" path="res://Sprites/font1.png" id="3_2wbjf"]
[ext_resource type="TileSet" uid="uid://ssw1p4ldc5kg" path="res://Scenes/Boards/TileSet.tres" id="4_f5mxu"]
[ext_resource type="Texture2D" uid="uid://dxfvrtpci8esq" path="res://Sprites/Levels/TestLevel/board.png" id="4_yatfn"]
[ext_resource type="PackedScene" uid="uid://cavxehselt3he" path="res://Objects/Boards/Piece.tscn" id="5_5kcnc"]
[ext_resource type="PackedScene" uid="uid://dtc8wqm5nbty2" path="res://Objects/Boards/Selector.tscn" id="6_ysf6o"]
[ext_resource type="PackedScene" uid="uid://bn3se1dw6cfhu" path="res://Objects/Boards/MessageWindow.tscn" id="7_hcaag"]

[node name="Board" type="Node2D"]
script = ExtResource("1_qudp1")
tileset = ExtResource("4_yatfn")

[node name="BoardName" type="Node2D" parent="."]

[node name="Label" type="Label" parent="BoardName"]
offset_right = 120.0
offset_bottom = 11.0
theme_override_fonts/font = ExtResource("3_2wbjf")
text = "board name here"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Board" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Board"]
y_sort_enabled = true
position = Vector2(16, 8)
tile_set = ExtResource("4_f5mxu")
format = 2
layer_0/name = "Board Outline"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_1/name = "Icons"
layer_1/tile_data = PackedInt32Array(65537, 1, 0, 65536, 1, 0, 0, 1, 0, 131072, 1, 0, 131073, 1, 0, 196609, 1, 0, 131074, 1, 0, 65538, 1, 0, 196610, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 262145, 1, 0, 262146, 1, 0, 196608, 1, 0)

[node name="Board Pieces" type="Node2D" parent="Board/TileMap"]

[node name="Godzilla" parent="Board/TileMap/Board Pieces" instance=ExtResource("5_5kcnc")]
position = Vector2(16, 24)

[node name="Mothra" parent="Board/TileMap/Board Pieces" instance=ExtResource("5_5kcnc")]
position = Vector2(16, 56)
frame = 6
piece_character = 1

[node name="Selector" parent="Board/TileMap" instance=ExtResource("6_ysf6o")]
position = Vector2(16, 24)

[node name="Camera2D" type="Camera2D" parent="Board/TileMap/Selector"]
limit_left = 0
limit_top = 0
limit_right = 256
limit_bottom = 240
drag_vertical_enabled = true
drag_vertical_offset = 1.0
drag_top_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true

[node name="GUI" type="CanvasLayer" parent="Board"]

[node name="MessageWindow" parent="Board/GUI" instance=ExtResource("7_hcaag")]
visible = false
offset_left = 16.0
offset_top = 136.0
offset_right = 48.0
offset_bottom = 168.0

[connection signal="piece_collision" from="Board/TileMap/Selector" to="." method="_on_selector_piece_collision"]
